# shmfd

./: Cargo.toml  Readme.md  systemd.oneshot.template  systemd.service.template
docs/: systemd.md  systemd.oneshot.template  systemd.service.template
examples/primes/: Cargo.toml
examples/primes-snapshot/: Cargo.toml
examples/primes-snapshot/src/: main.rs
examples/primes/src/: main.rs
shm-fd/: Cargo.toml  Changes.md  Readme.md
shm-fd/src/: lib.rs  listenfd.rs  main.rs  notifyfd.rs  op.rs  sd_fd.rs
shm-restore/: Cargo.toml
shm-restore/src/: main.rs
shm-snapshot/: Cargo.toml  Changes.md  Readme.md
shm-snapshot/src/: lib.rs  tests.rs  writer.rs
shm-snapshot/tests/: reinitialize.rs
shm-state/: Cargo.toml
shm-state/src/: area.rs  lib.rs  log.rs  mmap.rs  ring.rs  seq.rs
shm-state/tests/: ring.rs
shm-watch/: Cargo.toml
tests/: Cargo.toml  Readme.md
tests/executables/: Cargo.toml
tests/executables/src/: lib.rs
tests/restore-v1/: Cargo.toml
tests/restore-v1/src/: main.rs
tests/validate/: Cargo.toml
tests/validate/src/: lib.rs
