[package]
name = "shm-fd"
version = "0.2.0"
edition = "2021"

authors = ["HeroicKatora"]
description = "Like systemfd/listenfd but with a shared-memory file descriptor"
repository = "https://github.com/HeroicKatora/shmfd"
license = "MPL-2.0"
readme = "Readme.md"
keywords = ["shm", "shared-memory", "systemfd", "listenfd", "shmfd"]
categories = ["memory-management", "os::unix-apis"]

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "shm-fd"

[dependencies]
libc = "0.2.109"
memfile = "0.2.1"
