[package]
name = "shm-fd"
version = "0.4.0"
edition = "2021"

authors = ["HeroicKatora"]
description = "Like systemfd/listenfd but with a shared-memory file descriptor"
repository = "https://github.com/HeroicKatora/shmfd"
license = "MPL-2.0"
readme = "Readme.md"
keywords = ["shm", "shared-memory", "systemfd", "listenfd", "shmfd"]
categories = ["memory-management", "os::unix-apis"]

[features]
std = []

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "shm-fd"
required-features = ["libc", "memfile", "std"]

[dependencies.libc]
version = "0.2.109"
optional = true
[dependencies.memfile]
version = "0.2.1"
optional = true
