[package]
name = "shm-restore"
version = "1.0.0-alpha"
edition = "2021"

[dependencies.libc]
version = "0.2.109"
[dependencies.memmap2]
version = "0.9"
[dependencies.shm-fd]
path = "../shm-fd"
[dependencies.shm-snapshot]
path = "../shm-snapshot"
[dependencies.tempfile]
version = "3.8"
[dependencies.clap]
version = "4"
features = ["derive"]
