[package]
name = "shm-snapshot"
version = "0.2.1"
edition = "2021"

authors = ["HeroicKatora"]
description = "Wrap a shm file so that the read-only partner can snapshot the file partially without explicit synchronization"
repository = "https://github.com/HeroicKatora/shmfd"
license = "MPL-2.0"
keywords = ["shm", "shared-memory", "systemfd", "listenfd", "shmfd"]
categories = ["memory-management", "os::unix-apis"]

[lib]

[[bin]]
name = "shm-restore"
required-features = ["shm-restore"]

[features]
shm-restore = [
  "libc",
  "memfile",
  "shm-fd",
  "shm-fd/libc",
  "shm-fd/std",
  "tempfile",
  "clap",
]

[dependencies.memmap2]
version = "0.9"

# Dependency block for shm-restore, the reference implementation of a snapshot
# host into a file on persistent file systems.
[dependencies.libc]
version = "0.2.109"
optional = true
[dependencies.shm-fd]
path = "../shm-fd"
version = "0.5"
optional = true
[dependencies.tempfile]
version = "3.8"
optional = true
[dependencies.clap]
version = "4"
features = ["derive"]
optional = true

[dependencies.memfile]
version = "0.2.1"
optional = true

[dev-dependencies.memfile]
version = "0.3.1"
