[package]
name = "shmfd-test-executables"
version = "0.0.0"
edition = "2021"

[dependencies.shm-fd]
path = "../../shm-fd"
artifact = ["bin:shm-fd"]
features = ["memfile"]

[dependencies.shm-snapshot]
path = "../../shm-snapshot"
artifact = ["bin:shm-restore"]
features = ["shm-restore"]

[dependencies.primes-snapshot]
path = "../../examples/primes-snapshot"
artifact = ["bin:primes-snapshot"]
